--- a/ui/src/components/common/Button.css
+++ b/ui/src/components/common/Button.css
@@ -47,7 +47,7 @@
 /* Variants */
 .button--primary {
   background-color: var(--color-primary);
-  color: white;
+  color: var(--color-text);
   border-color: var(--color-primary);
 }
 
